Add messenger configuration. Setup command and query bus.

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ APP_ENV=dev
 APP_SECRET=2ad2f46b87bc5f9eef8cbe6accaad799
 
 DATABASE_URL="mysql://web24:secret@127.0.0.1:3306/web24?serverVersion=5.7&charset=utf8mb4"
+
+MESSENGER_TRANSPORT_DSN=doctrine://default
