Add symfony profiler. Add Employee Create, Update, Delete commands and handlers

--- a/config/routes/employee.yaml
+++ b/config/routes/employee.yaml
@@ -1,24 +1,24 @@
 app.employee.list:
   path: /companies/{companyId}/employees
   methods: GET
-  controller: App\Controller\CompanyController::index
+  controller: App\Controller\EmployeeController::index
 
 app.employee.create:
   path: /companies/{companyId}/employees
   methods: POST
-  controller: App\Controller\CompanyController::create
+  controller: App\Controller\EmployeeController::create
 
 app.employee.read:
   path: /companies/{companyId}/employees/{id}
   methods: GET
-  controller: App\Controller\CompanyController::read
+  controller: App\Controller\EmployeeController::read
 
 app.employee.update:
   path: /companies/{companyId}/employees/{id}
   methods: PUT
-  controller: App\Controller\CompanyController::update
+  controller: App\Controller\EmployeeController::update
 
 app.employee.delete:
   path: /companies/{companyId}/employees/{id}
   methods: DELETE
-  controller: App\Controller\CompanyController::delete
+  controller: App\Controller\EmployeeController::delete
